<resources>
    <string name="app_name">U-Garden</string>
    <string name="closeApp">Appuyer une fois de plus pour quitter</string>
    <string name="descriptionLeaf">Image du logo</string>
    <string name="connection">Connexion</string>
    <string name="username">Pseudo</string>
    <string name="password">Mot de passe</string>
    <string name="error">Doit contenir entre 3 et 30 caractères</string>
    <string name="noMatch">Pseudo et/ou mot de passe non valide</string>
    <string name="errorIdTeam">Doit contenir entre 16 et 30 caractères</string>
    <string name="register">Inscription</string>
    <string name="lastName">Nom</string>
    <string name="firstName">Prénom</string>
    <string name="team">ID de la classe</string>
    <string name="welcome">Bienvenue</string>
    <string name="scan">Scan</string>
    <string name="calendar">Calendrier</string>
    <string name="account">Compte</string>
    <string name="faq">FAQ</string>
    <string name="noInternet">Connexion internet requise</string>
    <string name="descriptionVegetable">Image de légume</string>
    <string name="errorCallAPI">Erreur lors de l\'accès aux données</string>
    <string name="usernameExisting">Pseudo déjà existant</string>
    <string name="errorAccessCode">Le code n\'existe pas</string>
    <string name="userCreated">Utilisateur ajouté avec succès</string>
    <string name="qrInvalid">Qr code non valide</string>
    <string name="tokenExpired">Connexion expirée</string>
    <string name="description">Description :</string>
    <string name="datePlanted">Planté le :</string>
    <string name="price">Prix :</string>
    <string name="settings">Paramètres</string>
    <string name="newPassword">Nouveau mot de passe</string>
    <string name="validate">Valider</string>
    <string name="cancel">Retour</string>
    <string name="wrongPassword">Mot de passe incorrect</string>
    <string name="successModify">Informations modifiées avec succès</string>
    <string name="formations">Formations</string>
    <string name="date">Date :</string>
</resources>
