<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="734dp">

                <ImageView
                    android:id="@+id/leaf"
                    android:layout_width="@android:dimen/notification_large_icon_width"
                    android:layout_height="@android:dimen/notification_large_icon_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/descriptionLeaf"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:color/transparent" />

                <TextView
                    android:id="@+id/label_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/settings"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="@+id/input_change_pseudo"
                    app:layout_constraintTop_toBottomOf="@+id/leaf" />

                <EditText
                    android:id="@+id/input_change_pseudo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_settings" />

                <EditText
                    android:id="@+id/input_change_lastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:hint="@string/lastName"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_change_newPassword" />

                <EditText
                    android:id="@+id/input_change_firstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:hint="@string/firstName"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_change_lastName"
                    android:imeOptions="actionDone" />

                <EditText
                    android:id="@+id/input_change_idTeam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/team"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_change_firstName" />

                <Button
                    android:id="@+id/button_change_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/validate"
                    app:layout_constraintEnd_toEndOf="@+id/input_change_idTeam"
                    app:layout_constraintStart_toEndOf="@+id/button_cancel"
                    app:layout_constraintTop_toTopOf="@+id/button_cancel" />

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_change_user"
                    app:layout_constraintStart_toStartOf="@+id/input_change_idTeam"
                    app:layout_constraintTop_toBottomOf="@+id/input_change_idTeam" />

                <EditText
                    android:id="@+id/input_change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_change_pseudo" />

                <EditText
                    android:id="@+id/input_change_newPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:hint="@string/newPassword"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_change_password" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>